Add Beginner's Series to Node.js

--- a/README.mdx
+++ b/README.mdx
@@ -175,6 +175,7 @@ Inspired by 👍 [ziadoz/awesome-php](https://github.com/ziadoz/awesome-php)
 - [Youtube - Building a Multiplayer Shooting Game with Node.JS, MongoDB and WebSocket](https://www.youtube.com/watch?v=PfSwUOBL1YQ)
 - [Node.js easily explained in a funny way](https://www.youtube.com/watch?v=KsjrN-T3ZCs)
 - [Youtube - Building a Twitch Chat Bot in 10 Minutes with Node.JS](https://www.youtube.com/watch?v=K6N9dSMb7sM)
+- [Youtube - Beginner's Series to Node.js](https://www.youtube.com/playlist?list=PLlrxD0HtieHje-_287YJKhY8tDeSItwtg)
 
 ## Screencasts
 - [Learn All The Nodes](http://learnallthenodes.com/)
